CORE-2387 - Fixed full width setting not stretching main container to available width

--- a/css/containers.less
+++ b/css/containers.less
@@ -55,8 +55,7 @@ body {
     }
 
     .full-width {
-        padding-left: 5em;
-        padding-right: 5em;
+        width: 100%;
     }
 
     .mw-container {
